# T3

./: .coveragerc  .gitignore  .travis.yml  2 do.txt  404.html  CNAME  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  T3.code-workspace  T3.py  cite.html  codecov.yml  contribute.html  credits.html  environment.yml  genindex.html  index.html  installation.html  license.html  mkdocs.yml  objects.inv  output.html  py-modindex.html  pyproject.toml  release.html  requirements.txt  running.html  search.html  searchindex.js  sitemap.xml  t3.py
.github/: labeler.yml
_modules/: index.html  t3.html
_sources/: credits.rst.txt  license.rst.txt  output.rst.txt  running.rst.txt
api/: index.html  logger.html  main.html  t3.html  utils.html
cite/: index.html
contribute/: index.html
credits/: index.html
data/: libraries.yml
devtools/: ARCHIVED_install_RMS_v032.jl  Dockerfile  Dockerfile_rmgpy  install_RMS_v030.jl  install_all.sh  install_arc.sh  install_julia.sh  install_pycall.jl  install_pyrdl.sh  install_pyrms.jl  install_pyrms.py  install_pyrms.sh  install_pyrms_1.jl  install_pyrms_2.jl  install_rms.jl  install_rms.py  install_rms.sh  travis_ci_before_install.sh
docs/: Makefile  cite.md  contribute.md  credits.md  examples.md  hooks.py  how_to.md  index.md  input_reference.md  installation.md  licence.md  output.md  release.md  running.md
examples/: index.html
grf/: T3_logo.psd  T3_logo.tif
how_to/: index.html
input_reference/: index.html
installation/: index.html
ipython/: sa_coefficients_viewer.ipynb
licence/: index.html
t3/: chem.py  (+10 more)
(+281 files in other folders)
